<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/bg_bottom_sheet">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_default"
        android:gravity="center_horizontal"
        android:text="@string/text_title_bottom_sheet_profile">

    </TextView>

    <ImageView
        android:layout_width="match_parent"
        android:background="?actionBarDivider"
        android:layout_marginVertical="16dp"
        android:layout_height="1dp">

    </ImageView>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_message_bottom_sheet_profile">

    </TextView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn"
        android:text="@string/text_button_camera_bottom_sheet_profile"
        app:backgroundTint="@null">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_btn"
        android:text="@string/text_button_gallery_bottom_sheet_profile"
        app:backgroundTint="@null">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>