<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".presenter.profile.ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_toolbar_profile_fragment"
                    android:textColor="@color/color_default">

                </TextView>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp">

            <FrameLayout
                android:id="@+id/frame_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <io.woong.shapedimageview.CircleImageView
                    android:id="@+id/imgUser"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:visibility="invisible"
                    app:border_color="@color/white"
                    app:border_size="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/image_user"
                    tools:visibility="visible">

                </io.woong.shapedimageview.CircleImageView>

                <ProgressBar
                    android:id="@+id/progress_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/color_default">

                </ProgressBar>

            </FrameLayout>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/text_name_profile_fragment"
                android:textColor="@color/color_default"
                android:textColorHint="@color/color_text_hint">

            </TextView>

            <EditText
                android:id="@+id/etName"
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_user_line"
                android:drawablePadding="8dp"
                android:hint="@string/text_hint_name_profile_fragment">

            </EditText>

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_phone_profile_fragment"
                android:textColor="@color/color_default"
                android:textColorHint="@color/color_text_hint">

            </TextView>

            <EditText
                android:id="@+id/etPhone"
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_phone_line"
                android:drawablePadding="8dp"
                android:hint="@string/text_hint_phone_profile_fragment">

            </EditText>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_email_profile_fragment"
                android:textColor="@color/color_default"
                android:textColorHint="@color/color_text_hint">

            </TextView>

            <EditText
                android:id="@+id/etEmail"
                style="@style/Theme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_mail_line"
                android:drawablePadding="8dp"
                android:enabled="false"
                android:hint="@string/text_hint_email_profile_fragment"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/color_text_hint">

            </EditText>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn"
                android:text="@string/text_button_registered_profile_fragment"
                android:textAllCaps="false"
                app:backgroundTint="@null">

            </com.google.android.material.button.MaterialButton>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:indeterminateTint="@color/color_default"
                android:visibility="invisible"
                tools:visibility="visible">

            </ProgressBar>

        </LinearLayout>

    </LinearLayout>

</ScrollView>